[gd_scene load_steps=2 format=3 uid="uid://bcniljw5lvd5a"]

[ext_resource type="Script" uid="uid://ba4jnmap7vo61" path="res://ui/hud.gd" id="1_rbyyf"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbyyf")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LivesLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RoundLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HurryBanner" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
